Made navbar visible in all parts (make background dark at all times), made carousel fixed size, and incorporated a small space place for short descriptions of pictures.

--- a/SinglePageDesign/Stylesheets/custom.css
+++ b/SinglePageDesign/Stylesheets/custom.css
@@ -2,6 +2,11 @@
     opacity: 1.0;
 }
 
+.col-centered {
+    float: none;
+    margin: 0 auto;
+}
+
 /* Makes nav bar fit entire screen when inside container. */
 .container {
     padding-right: 0px;
@@ -10,15 +15,37 @@
     margin-right: 0px;
 }
 
+/* Makes images in carousel fit one size */
+.carousel-inner {
+    height: 100%;
+}
+
+.carousel-inner .item {
+    overflow: hidden;
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.item {
+    width: 100%;
+    min-height: 100%;
+    max-height: none;
+}
+
 .navbar {
     margin-bottom: 0px;
     border-radius: 0px;
     background-color: transparent;
     border-color: transparent;
+
 }
 
 .navbar-inverse .navbar-brand {
     color: white;
+}
+
+.navbar-inverse .navbar-nav .active a {
+    opacity: .8;
 }
 
 .navbar-inverse .navbar-nav li a {
